fix swagger ReviewController
